--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="btn_less">-</string>
     <string name="btn_divide">/</string>
     <string name="btn_multiplication">x</string>
+    <string name="btn_clear">clear</string>
+    <string name="btn_clear_all">clearall</string>
 </resources>
